--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- navbar -->
 <div class="nav-bg">
-    <nav class="navbar navbar-expand-lg nav-border">
+    <nav class="nav-bg navbar navbar-expand-lg nav-border">
         <div class="container-fluid">
           <a class="brand" href="#">AN</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
